# ds-battery-health

./: IMPLEMENTATION.md  README.md  battery_model.pkl  battery_predictor.pkl  battery_predictor_v2.pkl  battery_predictor_v3.pkl  battery_predictor_v5.pkl  main.ipynb  main.py  preprocessor.pkl  pyproject.toml  streamlit_app.py  test_user_behaviors.py
.ipynb_checkpoints/: main-checkpoint.ipynb  main-checkpoint.py  pyproject-checkpoint.toml
battery_health/: __init__.py  config.py  data.py  forecasting.py  modeling.py  planning.py  reporting.py  schemas.py  utils.py
datasets/: device_battery_capacities.csv  user_behavior_dataset_enriched.csv
scripts/: enrich_battery_capacities.py
