[project]
name = "ds-battery-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.2.0,<3.0.0",
    "pulp>=3.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.49.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "xgboost>=3.2.0",
]
